# scrapy-tutorial

./: .gitignore  pyproject.toml
app/: middlewares.py  settings.py
app/items/: book.py
app/spiders/: books_spider.py  quotes_spider.py
